# rustorio

./: Cargo.toml  README.md  justfile  landing_page.html  rustfmt.toml
.github/workflows/: ci.yml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/example1/: fn.user_main.html
docs/example2/: fn.user_main.html
docs/revolution/: all.html  enum.ResourceType.html  fn.mine_copper.html  fn.mine_iron.html  fn.play.html  index.html  sidebar-items.js  struct.Bundle.html  struct.Resource.html  struct.Tick.html  type.CopperOreBundle.html  type.IronOreBundle.html
docs/revolution/buildings/: index.html  struct.Assembler.html  struct.Furnace.html
docs/revolution/gamemodes/: index.html  sidebar-items.js  struct.Standard.html  struct.StandardStartingResources.html  struct.Tutorial.html  struct.TutorialStartingResources.html  trait.GameMode.html
docs/revolution/recipes/: index.html  sidebar-items.js  struct.CopperSmelting.html  struct.IronSmelting.html  struct.PointRecipe.html  trait.AssemblerRecipe.html  trait.FurnaceRecipe.html
docs/revolution/resources/: enum.ResourceType.html  struct.Bundle.html  struct.Resource.html
docs/revolution/tick/: struct.Tick.html
docs/rustorio/: all.html  enum.ResourceType.html  fn.mine_copper.html  fn.mine_iron.html  fn.play.html  index.html  sidebar-items.js  struct.Bundle.html  struct.Resource.html  struct.Tick.html  type.CopperOreBundle.html  type.IronOreBundle.html
docs/rustorio/buildings/: index.html  struct.Assembler.html  struct.Furnace.html
docs/rustorio/gamemodes/: index.html  struct.Standard.html  struct.StandardStartingResources.html  struct.Tutorial.html  struct.TutorialStartingResources.html  trait.GameMode.html
docs/rustorio/recipes/: index.html  sidebar-items.js  struct.CopperSmelting.html  struct.IronSmelting.html  struct.PointRecipe.html  struct.RedScienceRecipe.html  trait.AssemblerRecipe.html  trait.FurnaceRecipe.html
docs/rustorio/research/: index.html  sidebar-items.js  struct.PointsResearch.html  trait.Research.html
docs/search.desc/revolution/: revolution-desc-0-.js
docs/search.index/: 01690518ec3f.js  1143775b8d70.js  13c0fb8e5779.js  161dd0e1e2e4.js  196bd0bedd0f.js  219ad346a201.js  220801d370f1.js  27d527743288.js  2fc5378e7e67.js  32bf441a4580.js  37068ff882ed.js  4954a31f25e4.js  4c3216fb4193.js  552911ad4d3b.js  5755b0196e2a.js  657eb773a8ff.js  66f16eb6d8f2.js  75e9749b2649.js  7dedac96bdb0.js  root.js
docs/search.index/desc/: 5d94a941c7e7.js  609c8c7ffd2c.js  8228a7fcf31e.js
docs/search.index/entry/: e7be21098509.js
docs/search.index/function/: 222c69fa40e3.js
docs/search.index/generic_inverted_index/: a6a0f4a74c65.js
docs/search.index/name/: c37e6dbe367f.js
docs/search.index/normalizedName/: 6ae36e3c63d9.js
docs/search.index/path/: 337b39d2b07e.js
docs/search.index/type/: d8a9c801465a.js
docs/src/example1/: example1.rs.html
docs/src/example2/: example2.rs.html
docs/src/revolution/: buildings.rs.html  gamemodes.rs.html  lib.rs.html  recipes.rs.html  resources.rs.html  tick.rs.html
docs/src/rustorio/: buildings.rs.html  gamemodes.rs.html  lib.rs.html  recipes.rs.html  research.rs.html  resources.rs.html  tick.rs.html
docs/trait.impl/core/clone/: trait.Clone.js
docs/trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
docs/trait.impl/core/convert/: trait.From.js
docs/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
docs/trait.impl/core/marker/: trait.ConstParamTy_.js  trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js  trait.UnsizedConstParamTy.js
docs/trait.impl/core/ops/arith/: trait.Add.js  trait.AddAssign.js
docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/trait.impl/revolution/gamemodes/: trait.GameMode.js
docs/trait.impl/rustorio/research/: trait.Research.js
docs/type.impl/revolution/: struct.Bundle.js
docs/type.impl/rustorio/: struct.Bundle.js
game/: Cargo.toml
game/src/: main.rs
rustorio/: Cargo.toml
rustorio-derive/: Cargo.toml
rustorio-derive/src/: lib.rs
rustorio-engine/: Cargo.toml
rustorio-engine/src/: gamemodes.rs  lib.rs  machine.rs  recipe.rs  research.rs  resources.rs  tick.rs
rustorio/examples/: standard_new_game.rs  tutorial_new_game.rs
rustorio/src/: buildings.rs  gamemodes.rs  guide.rs  lib.rs  recipes.rs  research.rs  resources.rs  territory.rs  tick.rs  tutorial.rs
rustorio/tests/: standard-palimpsest.rs  standard-simple.rs  standard.rs  tutorial.rs
