[package]
name = "rustorio-derive"
version = "0.0.4"
edition = "2024"
description = """The first game written and played entirely in Rust's type system. Not just do you play by
writing Rust code, the rules of the game are enforced by the Rust compiler! If
you can write the program so it compiles and doesn't panic, you win!"""
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/albertsgarde/rustorio"
include = ["src", "Cargo.toml", "rust-toolchain"]
documentation = "https://docs.rs/rustorio-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"
