[package]
name = "rustorio-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = """The first game written and played entirely in Rust's type system. Not just do you play by
writing Rust code, the rules of the game are enforced by the Rust compiler! If
you can write the program so it compiles and doesn't panic, you win!"""
readme = "../README.md"
documentation = "https://docs.rs/rustorio-derive"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"
