[package]
name = "rustorio-engine"
version = "0.0.5"
edition = "2024"
description = """The first game written and played entirely in Rust's type system. Not just do you play by
writing Rust code, the rules of the game are enforced by the Rust compiler! If
you can write the program so it compiles and doesn't panic, you win!"""
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/albertsgarde/rustorio"
include = ["src", "Cargo.toml", "rust-toolchain"]
documentation = "https://docs.rs/rustorio-engine"

[dependencies]
rustorio-derive = { path = "../rustorio-derive", version = "0.0.4" }
