[package]
name = "rustorio-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = """The first game written and played entirely in Rust's type system. Not just do you play by
writing Rust code, the rules of the game are enforced by the Rust compiler! If
you can write the program so it compiles and doesn't panic, you win!"""
readme = "../README.md"
documentation = "https://docs.rs/rustorio-engine"

[dependencies]
rustorio-derive = { path = "../rustorio-derive", version = "0.0.5" }
