[package]
name = "rustorio"
version = "0.0.3"
edition = "2024"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:anyhow", "dep:dialoguer", "dep:thiserror"]

[dependencies]
rustorio-engine = { path = "../rustorio-engine", version = "0.0.3" }

anyhow = { version = "1.0.100", optional = true }
clap = { version = "4.5.53", optional = true, features = ["derive"] }
dialoguer = { version = "0.12.0", optional = true }
thiserror = { version = "2.0.17", optional = true }

[[bin]]
name = "rustorio"
path = "src/bin/cli/main.rs"
required-features = ["cli"]
