[package]
name = "rustorio"
version = "0.0.4"
edition = "2024"
description = """The first game written and played entirely in Rust's type system. Not just do you play by
writing Rust code, the rules of the game are enforced by the Rust compiler! If
you can write the program so it compiles and doesn't panic, you win!"""
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/albertsgarde/rustorio"
include = ["src", "Cargo.toml", "rust-toolchain", "examples/*_new_game.rs"]
documentation = "https://docs.rs/rustorio"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:anyhow", "dep:dialoguer", "dep:thiserror"]

[dependencies]
rustorio-engine = { path = "../rustorio-engine", version = "0.0.4" }

anyhow = { version = "1.0.100", optional = true }
clap = { version = "4.5.53", optional = true, features = ["derive"] }
dialoguer = { version = "0.12.0", optional = true }
thiserror = { version = "2.0.17", optional = true }

[[bin]]
name = "rustorio"
path = "src/bin/cli/main.rs"
required-features = ["cli"]
